--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Booki</title>
   </head>
   <body>
-    <h1>Hello Vite</h1>
+    <%- include(template('index')) %> 
+    <script type="module" src="./assets/scripts/main.ts"></script>
   </body>
 </html>
