🍱 Added favicon to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Booki, your partner to find the best rental near Marseille" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo/favicon.ico" />
     <link rel="stylesheet" href="./assets/styles/main.scss" />
     <title>Booki</title>
   </head>
